# walk-crawl-run

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: concurrent_crawler_test.py  crawl_page_test.py  sync_crawler_test.py
walkcrawlrun/: __main__.py  crawl_page.py
walkcrawlrun/crawlers/: concurrent.py  crawl_result.py  sync.py
