[tool.poetry]
name = "walkcrawlrun"
version = "0.1.0"
description = ""
authors = ["Lewis Greenway-Jones <lewis.greenway-jones@zoopla.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^23.2.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"
aiodns = "^3.1.1"
brotli = "^1.1.0"
aioresponses = "^0.7.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
mypy = "^1.7.1"
types-beautifulsoup4 = "^4.12.0.7"
types-requests = "^2.31.0.10"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
